Improve FEC ethernet configuration on F&S boards
Improve the FEC driver to handle this better.

    - In fec_probe(), if a phy-handle is given, and the according MDIO
      bus is not yet available and the MDIO bus is not a child of this
      FEC port, then defer the probing until the MDIO bus is available.
    - This obsoletes the code for MDIO bus sharing that was available in
      fec_enet_mii_init().
    - Get the eth port number from the ethernet alias, not by increasing
      the number automatically.

--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -146,6 +146,14 @@
 	regulators {
 		compatible = "simple-bus";
 
+		reg_vref_3v3: regulator@0 {
+			compatible = "regulator-fixed";
+			regulator-name = "vref-3v3";
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+			regulator-always-on;
+		};
+
 		/* USB_OTG_PWR handled by USB controller, no regulator needed */
 #if 0 //###
 		reg_usb_otg_vbus: usb_otg_vbus {
@@ -589,7 +597,21 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_enet>;
 	phy-mode = "rgmii";
+	phy-handle = <&ethphy0>;
+	phy-supply = <&reg_vref_3v3>;
 	status = "okay";
+
+	mdio {
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		ethphy0: ethernet-phy@4 {
+			compatible = "ethernet-phy-ieee802.3-c22";
+			reg = <4>;
+			/* Set the maximum link speed if required */
+			//max-speed = <100>;
+		};
+	};
 };
 
 &can1 {
