--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -630,7 +630,6 @@
 	phy-mode = "rmii";
 	phy-handle = <&ethphy0>;
 	phy-supply = <&reg_vref_3v3>;
-	fsl,ref-clock-out;
 	status = "okay";
 
 	mdio {
@@ -640,6 +639,8 @@
 		ethphy0: ethernet-phy@1 {
 			compatible = "ethernet-phy-ieee802.3-c22";
 			reg = <1>;
+			/* Set the maximum link speed if required */
+			//max-speed = <100>;
 		};
 	};
 };
