fs_adc_i2c_rpmsg_demo
Add rpmsg example that measures an analog input voltage with the
I2C-extension-board, sends it to the M4 via I2C and onto the A9 via
rpmsg into a ring buffer. Also adds a sysfs entry under
/sys/fs_rpmsg/buffer so that the result can be fetched from userland.
Add entry in Kconfig, Makefile and a short Documentation under
fs_rpmsg.txt.
Driver is disabled by default.

--- a/drivers/rpmsg/Kconfig
+++ b/drivers/rpmsg/Kconfig
@@ -16,4 +16,12 @@ config IMX_RPMSG_TTY
 	default m
 	depends on RPMSG && m
 
+config FS_RPMSG
+  bool "Driver for the Cortex-M4 demo 'fs_adc_i2c_rpmsg_demo'"
+  default n
+  depends on RPMSG
+	help
+    This driver provides an interface under /sys/imx_rpmsg to retrieve
+    the values send by the fs_adc_i2c_rpmsg_demo from the Cortex-M4
+
 endmenu
